tests/src/frontend/typechecking/invalid/extend_covaraint_invalid.sk
fun a_no(): String {
  _ = if (true) L() else R();
  "FAIL"
}

base class P<+T>
class L() extends P<L>
class R() extends P<R>
